ingress/ingresscontrol-stage.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myfeed-ingress-stage
  namespace: researchfeed
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: my-feed-ui-service-stage
              servicePort: 4200
          - path: /researchfeed/?(.*)
            backend:
              serviceName: my-feed-service-stage
              servicePort: 80
